--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#FF6B35">
     <meta name="description" content="Live public transport tracking for Tier 2 Indian cities. Track buses, trains, and autos in real-time.">
     <link rel="icon" type="image/svg+xml" href="Garunyaan.png">
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC58DQ3D9UYgr4irZ9Hd1HKGJ8L3lOh4Lg&callback=initMap&libraries=geometry" onerror="handleMapsError()"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY" onerror="handleMapsError()"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="styles-enhanced.css">
     
